# MakePdfEasily

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql.yml  python-publish.yml
Examples/Telegram bot/pytelegrambotapi with MakePdfEasily/: main.py  requirements.txt
languages/: Arabic.md
makepdfeasily/: buffers_to_pdf.py
src/: MakePdfEasily.py
src/MakePdfEasily.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
