[project]
name = "MakePdfEasily"
version = "0.0.9"
[build-system]
requires = ["Pillow","PyPDF2"]
authors = [
  { name="MakePdfEasily", email="author@example.com" },
]
description ="hi
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"