# pyproject.toml
[build-system]
requires = ["setuptools>=61.0.0", "wheel"  , "Pillow","PyPDF2"]

[project]
name = "MakePdfEasily"
version = "0.0.32"
dependencies = ["setuptools>=61.0.0", "wheel"  , "Pillow","PyPDF2"]
authors = [
  { name="MakePdfEasily", email="ali0088552211@gmail.com" },
]
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Ali-Adnan219/MakePdfEasily"
"Bug Tracker" = "https://github.com/Ali-Adnan219/MakePdfEasily/issues"